--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/lab": "^5.0.0-alpha.127",
     "@mui/material": "^5.11.15",
     "@mui/x-date-pickers": "^6.0.4",
-    "axios": "^1.3.4",
+    "axios": "^1.3.5",
     "cra-template": "1.2.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.8",
+    "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.43.9",
     "react-images": "^1.2.0-beta.7",
     "react-markdown": "^8.0.6",
     "react-photo-gallery": "^8.0.0",
+    "react-player": "^2.12.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
