--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.127",
     "@mui/material": "^5.11.15",
     "@mui/x-date-pickers": "^6.0.4",
+    "@udecode/slate-plugins": "^1.0.0-next.61",
     "axios": "^1.3.5",
     "cra-template": "1.2.0",
     "date-fns": "^2.29.3",
+    "interweave": "^13.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
     "react-images": "^1.2.0-beta.7",
+    "react-katex": "^3.0.1",
     "react-markdown": "^8.0.6",
     "react-photo-gallery": "^8.0.0",
     "react-player": "^2.12.0",
@@ -26,6 +31,11 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
+    "slate": "^0.94.0",
+    "slate-history": "^0.93.0",
+    "slate-hyperscript": "^0.77.0",
+    "slate-plugins": "^1.7.2",
+    "slate-react": "^0.94.0",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
