--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
@@ -13,10 +16,14 @@
     "@mui/x-date-pickers": "^6.0.4",
     "@udecode/slate-plugins": "^1.0.0-next.61",
     "axios": "^1.3.5",
+    "bootstrap": "^5.2.3",
     "cra-template": "1.2.0",
+    "css-loader": "^6.7.3",
     "date-fns": "^2.29.3",
     "interweave": "^13.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.43.9",
