--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cra-template": "1.2.0",
     "css-loader": "^6.7.3",
     "date-fns": "^2.29.3",
+    "install": "^0.13.0",
     "interweave": "^13.1.0",
+    "npm": "^9.6.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-cool-onclickoutside": "^1.7.0",
