working on navbar routes

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cra-template": "1.2.0",
     "css-loader": "^6.7.3",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "install": "^0.13.0",
     "interweave": "^13.1.0",
     "npm": "^9.6.6",
