--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "slate-hyperscript": "^0.77.0",
     "slate-plugins": "^1.7.2",
     "slate-react": "^0.94.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "vercel": "^29.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
