--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -12,7 +12,8 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.127",
-    "@mui/material": "^5.11.15",
+    "@mui/material": "^5.13.0",
+    "@mui/styles": "^5.12.3",
     "@mui/x-date-pickers": "^6.0.4",
     "@udecode/slate-plugins": "^1.0.0-next.61",
     "axios": "^1.3.5",
