--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "css-loader": "^6.7.3",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "install": "^0.13.0",
     "interweave": "^13.1.0",
     "npm": "^9.6.6",
@@ -29,6 +31,7 @@
     "react-bootstrap": "^2.7.4",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
