--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "slate-plugins": "^1.7.2",
     "slate-react": "^0.94.0",
     "slick-carousel": "^1.8.1",
+    "universal-cookie": "^4.0.4",
     "vercel": "^29.1.1"
   },
   "scripts": {
