--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styles": "^5.12.3",
     "@mui/x-date-pickers": "^6.0.4",
     "@udecode/slate-plugins": "^1.0.0-next.61",
+    "autosuggest-highlight": "^3.3.4",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "cra-template": "1.2.0",
