working on socket.io

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,16 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+     "rewrites": [
+      {
+        "source": "/job-profile/**",
+        "function": "seoReplaceApi"
+      },
+      {
+         "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
